# OSPSuite.FuncParser

./: .gitignore  OSPSuite.FuncParser.sln  README.md  appveyor.yml  packages.config
ConsoleApp1/: ConsoleApp1.csproj  Program.cs
src/OSPSuite.FuncParser/: DimensionInformation.cs  DimensionParser.cs  FuncParser.cs  FuncParser.rc  FuncParser.vcxproj.filters  OSPSuite.FuncParser.csproj  OSPSuite.FuncParser.nuspec  OSPSuite.FuncParser.vcxproj  OSPSuite.FuncParserUbuntu18.nuspec  ParsedFunction.cs  resource.h  version.h
src/OSPSuite.FuncParserNative/: CMakeLists.txt  FuncParser.rc  OSPSuite.FuncParserNative.vcxproj  OSPSuite.FuncParserNative.vcxproj.filters
src/OSPSuite.FuncParserNative/include/FuncParser/: Constant.h  Constants.h  DimensionInfo.h  DimensionParser.h  ElemFunction.h  ElemFunctions.h  FuncNode.h  FuncParser.h  FuncParserErrorData.h  FuncParserTypeDefs.h  Math.h  PInvokeHelper.h  ParsedFunction.h  QuantityDimensionInfo.h  StringHelper.h
src/OSPSuite.FuncParserNative/src/: Constant.cpp  Constants.cpp  DimensionInfo.cpp  DimensionParser.cpp  ElemFunction.cpp  ElemFunctions.cpp  FuncNode.cpp  FuncParser.cpp  FuncParserErrorData.cpp  Math.cpp  PInvokeHelper.cpp  ParsedFunction.cpp  QuantityDimensionInfo.cpp  StringHelper.cpp
tests/: FuncParser.m
tests/OSPSuite.FuncParser.Tests/: DimensionParserSpecs.cs  FuncParserSpecs.cs  OSPSuite.FuncParser.Tests.csproj  OSPSuite.FuncParser.Tests.vcxproj  OSPSuite.FuncParser.Tests.vcxproj.filters  ParsedFunctionSpecs.cs
tests/TestAppNetCore/: TestAppNetCore.csproj
tests/TestFuncParserCPP/: .cproject  .project  (+6 more)
(+43 files in other folders)
